--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 formData.append('_captcha', 'false');
                 formData.append('_template', 'box');
                 
-                const response = await fetch('https://formsubmit.co/ajax/polar.melted.bear@gmail.com', {
+                const response = await fetch('https://formsubmit.co/ajax/f5ec7ca9c01bc027e28bbecb0109ed4b', {
                     method: 'POST',
                     headers: {
                         'Accept': 'application/json'
